chore: update Dockerfile and README for improved Go CLI tool setup and documentation

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,7 +6,7 @@ ARG USER_GID=$USER_UID
 
 # Create the user
 RUN groupadd --gid $USER_GID $USERNAME \
-  && useradd --uid $USER_UID --gid $USER_GID -m $USERNAME
+  && useradd --uid $USER_UID --gid $USER_GID -m $USERNAME 
 
 RUN apt-get update && apt-get install -y \
   zip \
@@ -17,7 +17,8 @@ USER $USERNAME
 WORKDIR /app
 
 RUN go install github.com/goreleaser/goreleaser/v2@latest && \
-  go install github.com/spf13/cobra-cli@latest
+  go install github.com/spf13/cobra-cli@latest && \
+  go install github.com/Songmu/gocredits/cmd/gocredits@latest
 
 ENV SHELL=/bin/bash
 
