--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -38,6 +38,10 @@ archives:
     format_overrides:
       - goos: windows
         format: zip
+    files:
+      - README.md
+      - LICENSE
+      - CREDITS
 
 changelog:
   sort: asc
