--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -22,8 +22,8 @@ jobs:
         with:
           go-version: 1.23
 
-      - name: Test
-        run: go test -v ./...
+      # - name: Test
+      #   run: go test -v ./...
 
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v6
